@@ -1,3 +1,6 @@
+  08 Nov 2019; François Bissey <frp.bissey@gmail.com> fsl-6.0.2.ebuild:
+  sci-biology/fsl: final touches. Skip mist-clean.
+
   07 Nov 2019; François Bissey <frp.bissey@gmail.com>
   +files/fsl-6.0.2-fsldir_redux.patch, fsl-6.0.2.ebuild:
   sci-biology/fsl: Work on fsldir elimination
